--- a/src/styles.css
+++ b/src/styles.css
@@ -1,17 +1,12 @@
+* {
+  background-color: #e5e7eb;
+}
+
 .App {
   font-family: sans-serif;
   text-align: center;
 }
 
-.options {
-  display: inline;
-  margin: 1rem 1rem;
-  border: 2px solid black;
-  padding: 1rem 1rem;
-  border-radius: 1rem;
-}
-
-.episode-list {
-  margin: 1rem 1rem;
-  list-style-type: none;
+h1 {
+  margin-bottom: 1rem;
 }
